# rag-research-agent

./: .gitignore  langgraph.json  pyproject.toml  requirements.txt
.github/workflows/: integration-tests.yml  unit-tests.yml
src/: __init__.py
src/config/: model.py
src/index_graph/: __init__.py  configuration.py  graph.py  state.py
src/memory/: __init__.py  configuration.py  graph.py  state.py  utils.py
src/retrieval_graph/: __init__.py  configuration.py  graph.py  prompts.py  state.py
src/retrieval_graph/researcher_graph/: graph.py  state.py
src/shared/: __init__.py  configuration.py  retrieval.py  state.py  utils.py
tests/integration_tests/: test_graph.py  test_memory.py
tests/unit_tests/: test_configuration.py
